refactor btn-card

--- a/explore-when.html
+++ b/explore-when.html
@@ -3506,7 +3506,7 @@
                                                                       class="_7yfwnp"
                                                                     >
                                                                       <button
-                                                                        class="btn-card-badge"
+                                                                        class="btn-card"
                                                                         aria-pressed="false"
                                                                         type="button"
                                                                       >
@@ -3580,7 +3580,7 @@
                                                                       class="_7yfwnp"
                                                                     >
                                                                       <button
-                                                                        class="btn-card-badge"
+                                                                        class="btn-card"
                                                                         aria-pressed="false"
                                                                         type="button"
                                                                       >
@@ -3654,7 +3654,7 @@
                                                                       class="_7yfwnp"
                                                                     >
                                                                       <button
-                                                                        class="btn-card-badge"
+                                                                        class="btn-card"
                                                                         aria-pressed="false"
                                                                         type="button"
                                                                       >
@@ -3728,7 +3728,7 @@
                                                                       class="_7yfwnp"
                                                                     >
                                                                       <button
-                                                                        class="btn-card-badge"
+                                                                        class="btn-card"
                                                                         aria-pressed="false"
                                                                         type="button"
                                                                       >
@@ -3802,7 +3802,7 @@
                                                                       class="_7yfwnp"
                                                                     >
                                                                       <button
-                                                                        class="btn-card-badge"
+                                                                        class="btn-card"
                                                                         aria-pressed="false"
                                                                         type="button"
                                                                       >
@@ -3876,7 +3876,7 @@
                                                                       class="_7yfwnp"
                                                                     >
                                                                       <button
-                                                                        class="btn-card-badge"
+                                                                        class="btn-card"
                                                                         aria-pressed="false"
                                                                         type="button"
                                                                       >
@@ -3950,7 +3950,7 @@
                                                                       class="_7yfwnp"
                                                                     >
                                                                       <button
-                                                                        class="btn-card-badge"
+                                                                        class="btn-card"
                                                                         aria-pressed="false"
                                                                         type="button"
                                                                       >
@@ -4024,7 +4024,7 @@
                                                                       class="_7yfwnp"
                                                                     >
                                                                       <button
-                                                                        class="btn-card-badge"
+                                                                        class="btn-card"
                                                                         aria-pressed="false"
                                                                         type="button"
                                                                       >
@@ -4098,7 +4098,7 @@
                                                                       class="_7yfwnp"
                                                                     >
                                                                       <button
-                                                                        class="btn-card-badge"
+                                                                        class="btn-card"
                                                                         aria-pressed="false"
                                                                         type="button"
                                                                       >
@@ -4172,7 +4172,7 @@
                                                                       class="_7yfwnp"
                                                                     >
                                                                       <button
-                                                                        class="btn-card-badge"
+                                                                        class="btn-card"
                                                                         aria-pressed="false"
                                                                         type="button"
                                                                       >
@@ -4246,7 +4246,7 @@
                                                                       class="_7yfwnp"
                                                                     >
                                                                       <button
-                                                                        class="btn-card-badge"
+                                                                        class="btn-card"
                                                                         aria-pressed="false"
                                                                         type="button"
                                                                       >
@@ -4320,7 +4320,7 @@
                                                                       class="_7yfwnp"
                                                                     >
                                                                       <button
-                                                                        class="btn-card-badge"
+                                                                        class="btn-card"
                                                                         aria-pressed="false"
                                                                         type="button"
                                                                       >
