--- a/become-a-host/description.html
+++ b/become-a-host/description.html
@@ -389,7 +389,7 @@
                                     <div dir="ltr">
                                       <textarea
                                         rows="4"
-                                        class="become-a-host__form-input-textarea"
+                                        class="textarea-lg"
                                         autocomplete="off"
                                         id="description.summary"
                                       >
@@ -399,10 +399,10 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
                                   </div>
                                 </div>
                                 <div
-                                  class="become-a-host__form-text-count"
+                                  class="textarea-lg-length"
                                   style="animation-delay: 497.9674649614837ms"
                                 >
-                                  <div class="become-a-host__text-count-content">
+                                  <div class="textarea-lg-length__text">
                                     <span aria-hidden="true"
                                       >84
                                       <!-- -->/
