--- a/become-a-host/title.html
+++ b/become-a-host/title.html
@@ -392,10 +392,10 @@ Cheerful private villa with pool</textarea
                                   </div>
                                 </div>
                                 <div
-                                  class="become-a-host__form-text-count"
+                                  class="textarea-lg-length"
                                   style="animation-delay: 497.9674649614837ms"
                                 >
-                                  <div class="become-a-host__text-count-content">
+                                  <div class="textarea-lg-length__text">
                                     <span aria-hidden="true"
                                       >32
                                       <!-- -->/
