--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -1871,7 +1871,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                                   rows="5"
                                                   data-testid="additional-requirements-text-area"
                                                   maxlength="850"
-                                                  class="form__textarea"
+                                                  class="textarea"
                                                   autocomplete="off"
                                                   id="additional-requirements-text-area"
                                                   placeholder="E.g. Guests should have prior surfing experience, guests must have a scuba license, guests should be comfortable around dogs, etc."
