--- a/edit/about.html
+++ b/edit/about.html
@@ -916,7 +916,7 @@ Hello! My name is Jose and I am from the Philippines! It is a pleasure to host t
                                                   data-testid="about_host_input"
                                                   maxlength="850"
                                                   minlength="150"
-                                                  class="form__textarea"
+                                                  class="textarea"
                                                   autocomplete="off"
                                                   id="about_host_input"
                                                   placeholder="Share the story behind your passion and knowledge."
