--- a/edit/what.html
+++ b/edit/what.html
@@ -1083,7 +1083,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                 aria-labelledby="description-label"
                                                 data-testid="description-textarea"
                                                 rows="9"
-                                                class="form__textarea"
+                                                class="textarea"
                                                 autocomplete="off"
                                                 id="description-textarea"
                                                 placeholder="Tell guests the story of what they’ll do during your experience."
