--- a/submission/about.html
+++ b/submission/about.html
@@ -1200,7 +1200,7 @@
                                       rows="5"
                                       maxlength="850"
                                       minlength="150"
-                                      class="form__textarea"
+                                      class="textarea"
                                       autocomplete="off"
                                       id="about_host_input"
                                       placeholder="Share the story behind your passion and knowledge."
