--- a/submission/guestReq.html
+++ b/submission/guestReq.html
@@ -1489,7 +1489,7 @@
                                         <textarea
                                           name="trip_template_traveler_requirements"
                                           rows="4"
-                                          class="form__textarea"
+                                          class="textarea"
                                           autocomplete="off"
                                           id="trip_template_traveler_requirements"
                                           placeholder="E.g. Guests should have prior surfing experience, guests must have a scuba license, guests should be comfortable around dogs, etc."
