--- a/resolutions_2.html
+++ b/resolutions_2.html
@@ -330,7 +330,7 @@
                               <textarea
                                 rows="6"
                                 aria-describedby="note_to_responder-DLS-describedBy-label"
-                                class="form__textarea"
+                                class="textarea"
                                 autocomplete="off"
                                 id="note_to_responder"
                               >
