--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -396,7 +396,7 @@
                                     <path d="m2 16h28"></path></svg
                                 ></span>
                               </button>
-                              <div class="header__search-tabs-filter-body-guests-count">
+                              <div class="counter__count">
                                 <div class="become-a-host__price-input-wrapper">
                                   <div class="site-content__content-menu-wrapper">
                                     <label
