--- a/become-a-host/floor-plan.html
+++ b/become-a-host/floor-plan.html
@@ -191,11 +191,11 @@
                                   </div>
                                   <div class="become-a-host__count-action-wrapper">
                                     <div
-                                      class="header__search-tabs-filter-body-guests-btn-content"
+                                      class="counter"
                                       id="stepper-item--0-stepper"
                                     >
                                       <button
-                                        class="header__search-tabs-filter-body-guests-btn"
+                                        class="counter__stepper"
                                         type="button"
                                         aria-label="Subtract"
                                         aria-describedby="stepper-item--0-row-title"
@@ -221,19 +221,19 @@
                                             <path d="m2 16h28"></path></svg
                                         ></span>
                                       </button>
-                                      <div class="header__search-tabs-filter-body-guests-count">
+                                      <div class="counter__count">
                                         <span
                                           aria-hidden="true"
                                           data-testid="stepper-item--0-stepper-value"
                                           >10</span
                                         ><span
-                                          class="header__search-tabs-filter-body-guests-text"
+                                          class="counter__label"
                                           data-testid="stepper-item--0-stepper-a11y-value-label"
                                           >10 guests</span
                                         >
                                       </div>
                                       <button
-                                        class="header__search-tabs-filter-body-guests-btn"
+                                        class="counter__stepper"
                                         type="button"
                                         aria-label="Add"
                                         aria-describedby="stepper-item--0-row-title"
@@ -288,11 +288,11 @@
                                   </div>
                                   <div class="become-a-host__count-action-wrapper">
                                     <div
-                                      class="header__search-tabs-filter-body-guests-btn-content"
+                                      class="counter"
                                       id="stepper-item--1-stepper"
                                     >
                                       <button
-                                        class="header__search-tabs-filter-body-guests-btn"
+                                        class="counter__stepper"
                                         type="button"
                                         aria-label="Subtract"
                                         aria-describedby="stepper-item--1-row-title"
@@ -318,19 +318,19 @@
                                             <path d="m2 16h28"></path></svg
                                         ></span>
                                       </button>
-                                      <div class="header__search-tabs-filter-body-guests-count">
+                                      <div class="counter__count">
                                         <span
                                           aria-hidden="true"
                                           data-testid="stepper-item--1-stepper-value"
                                           >6</span
                                         ><span
-                                          class="header__search-tabs-filter-body-guests-text"
+                                          class="counter__label"
                                           data-testid="stepper-item--1-stepper-a11y-value-label"
                                           >6 beds</span
                                         >
                                       </div>
                                       <button
-                                        class="header__search-tabs-filter-body-guests-btn"
+                                        class="counter__stepper"
                                         type="button"
                                         aria-label="Add"
                                         aria-describedby="stepper-item--1-row-title"
@@ -385,11 +385,11 @@
                                   </div>
                                   <div class="become-a-host__count-action-wrapper">
                                     <div
-                                      class="header__search-tabs-filter-body-guests-btn-content"
+                                      class="counter"
                                       id="stepper-item--2-stepper"
                                     >
                                       <button
-                                        class="header__search-tabs-filter-body-guests-btn"
+                                        class="counter__stepper"
                                         type="button"
                                         aria-label="Subtract"
                                         aria-describedby="stepper-item--2-row-title"
@@ -415,19 +415,19 @@
                                             <path d="m2 16h28"></path></svg
                                         ></span>
                                       </button>
-                                      <div class="header__search-tabs-filter-body-guests-count">
+                                      <div class="counter__count">
                                         <span
                                           aria-hidden="true"
                                           data-testid="stepper-item--2-stepper-value"
                                           >3</span
                                         ><span
-                                          class="header__search-tabs-filter-body-guests-text"
+                                          class="counter__label"
                                           data-testid="stepper-item--2-stepper-a11y-value-label"
                                           >3 bedrooms</span
                                         >
                                       </div>
                                       <button
-                                        class="header__search-tabs-filter-body-guests-btn"
+                                        class="counter__stepper"
                                         type="button"
                                         aria-label="Add"
                                         aria-describedby="stepper-item--2-row-title"
@@ -482,11 +482,11 @@
                                   </div>
                                   <div class="become-a-host__count-action-wrapper">
                                     <div
-                                      class="header__search-tabs-filter-body-guests-btn-content"
+                                      class="counter"
                                       id="stepper-item--3-stepper"
                                     >
                                       <button
-                                        class="header__search-tabs-filter-body-guests-btn"
+                                        class="counter__stepper"
                                         type="button"
                                         aria-label="Subtract"
                                         aria-describedby="stepper-item--3-row-title"
@@ -512,19 +512,19 @@
                                             <path d="m2 16h28"></path></svg
                                         ></span>
                                       </button>
-                                      <div class="header__search-tabs-filter-body-guests-count">
+                                      <div class="counter__count">
                                         <span
                                           aria-hidden="true"
                                           data-testid="stepper-item--3-stepper-value"
                                           >2.5</span
                                         ><span
-                                          class="header__search-tabs-filter-body-guests-text"
+                                          class="counter__label"
                                           data-testid="stepper-item--3-stepper-a11y-value-label"
                                           >2.5 bathrooms</span
                                         >
                                       </div>
                                       <button
-                                        class="header__search-tabs-filter-body-guests-btn"
+                                        class="counter__stepper"
                                         type="button"
                                         aria-label="Add"
                                         aria-describedby="stepper-item--3-row-title"
